...
    <string name="permission_after">After</string>
    <string name="permission_settings">Settings</string>
    <string name="location_warning">Location</string>
    <string name="location_continue">To continue, enable the location on your device.</string>

    <string name="title_no_connection">No connection</string>
    <string name="title_retry">Retry</string>
    <string name="error_message">An error has occurred. Please try again by clicking REFRESH</string>

    <string name="route_detail_change_direction">Chance direction</string>
    <string name="route_detail_change_map">Change to map</string>
    <string name="route_detail_change_list">Change to list</string>

    <string name="route_detail_size_stops">%s stops</string>
...
